--- a/HealthLife/package.json
+++ b/HealthLife/package.json
@@ -27,6 +27,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
