--- a/HealthLife/package.json
+++ b/HealthLife/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --configuration production --optimization",
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "font-awesome": "^4.7.0",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
