--- a/HealthLife/package.json
+++ b/HealthLife/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "ngx-spinner": "^14.0.0",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
