--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "npm-check-updates": "^16.0.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
